# NinjOS-Proxie-Edge-Fabric

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALLATION.md  Makefile  NOTICE.md  README.md  SECURITY.md  SUPPORT.md  install-standalone.sh  install-windows.ps1  manage-windows.ps1  manifest.json  ninjos-dashboard-account.sh  start-runtime.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
companion/: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  SECURITY.md  companion.properties.example  release-metadata.json
companion/.github/workflows/: build-companion.yml
companion/docs/: BUILD.md  COMPATIBILITY.md  COMPLETE_SETUP.md  COMPLETE_SETUP.md.in  CONFIGURATION.md  GITHUB_ACTIONS.md  INSTALL.md
companion/endstone-runtime/: INSTALL.md  ninjos-native-identity.patch
companion/scripts/: generate-documentation.py
companion/src/: plugin.cpp
config/: edge-fabric.example.ini
dashboard/: auth_accounts.go  backends.go  config.go  control_plane.go  go.mod  identity_bridge.go  main.go  management.go  packet-names.json  product.go  storage_sqlite.go
dist-assets/: egg-ninjos-proxie-edge-fabric-v7.3.0.json  egg-ninjos-proxie-edge-fabric-v7.3.1.json  egg-ninjos-proxie-edge-fabric-v7.3.10.json  egg-ninjos-proxie-edge-fabric-v7.3.11.json  egg-ninjos-proxie-edge-fabric-v7.3.12.json  egg-ninjos-proxie-edge-fabric-v7.3.13.json  egg-ninjos-proxie-edge-fabric-v7.3.14.json  egg-ninjos-proxie-edge-fabric-v7.3.15.json  egg-ninjos-proxie-edge-fabric-v7.3.16.json  egg-ninjos-proxie-edge-fabric-v7.3.2.json  egg-ninjos-proxie-edge-fabric-v7.3.3.json  egg-ninjos-proxie-edge-fabric-v7.3.4.json  egg-ninjos-proxie-edge-fabric-v7.3.5.json  egg-ninjos-proxie-edge-fabric-v7.3.6.json  egg-ninjos-proxie-edge-fabric-v7.3.7.json  egg-ninjos-proxie-edge-fabric-v7.3.8.json  egg-ninjos-proxie-edge-fabric-v7.3.9.json
docs/: ACKNOWLEDGEMENTS.md  ARCHITECTURE.md  BACKEND_MANAGEMENT.md  BACKEND_SAVE_FIX.md  COMPANION.md  QUICK_START.md  (+26 more)
(+68 files in other folders)
